--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,7 @@ code {
   padding: 2rem 4rem;
   border-radius: 10px;
   box-shadow: 1px 1px 5px rgba(246, 244, 244, 0.25);
-  margin-bottom: 2rem;
+  margin: 2rem;
   background-color: rgb(255, 255, 255);
 }
 
